Career_Path_Full-Stack_Engineer/04_JavaScript_Syntax_Part_II/04.5_Learn_JavaScript_Syntax_Errors_and_Debugging/04.5.2_Reading_Error_Stack_Traces/error_stack_trace.txt
Based on the following error stack trace, fill in the answers to the questions below:

------------------------------------------------------------------

/home/ccuser/workspace/learn-javascript-debugging-code/script.js:5
if (numberSum > total;) {
                     ^
            
SyntaxError: Unexpected token ;

------------------------------------------------------------------

From what file was this error thrown?
1 - Answer: script.js
On what line of that file was this error thrown?
2 - Answer: 5
What type of error was thrown in this stack trace?
3 - Answer: SyntaxError
What is the description of the error in this stack trace?
4 - Answer: Unexpected token ;
